test/src/e2e_vm_tests/test_programs/should_pass/language/aliased_imports/src/bar.sw
library;

pub struct Bar {
    pub bar: u64,
}
