test/src/e2e_vm_tests/test_programs/should_fail/struct_field_privacy_instantiation/src/lib.sw
library;

pub struct LibStruct {
    pub x: u64,
    y: u64,
    z: u64,
}

pub struct LibOnlyPrivateFields {
    x: u64,
    y: u64,
}

pub struct LibOnePrivateField {
    pub x: u64,
    y: u64,
}

pub struct LibTwoPrivateFields {
    pub x: u64,
    y: u64,
    z: u64,
}

pub struct LibThreePrivateFields {
    pub x: u64,
    y: u64,
    z: u64,
    zz: u64,
}